1998-06-24  Alex Lancaster  <alex@santafe.edu>

	* README: Removed outdated mention of Makefile.conf, tidied,
	reformatting.

	* INSTALL: Add extra `configure' options. Add note regarding
	problems with building shared libraries on Sun/Solaris machines.

	* NEWS: Elaborate on command-line and graphics features.

1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* configure.in (zlibincludedir, pngincludedir): New options.

	* VERSION: Bump to 1.2.

	* Makefile.am:  Distribute VERSION.

	* configure.in (tcllibname, tklibname): New arguments.
	Add "-I m4" to aclocal, if it exists.
	(SUBDIRS, AC_OUTPUT): Include m4 and src/tkobjc/tk.

	* Makefile.appl.in (LDFLAGS): Add libdir and rpath to LDFLAGS.

1998-06-23  Alex Lancaster  <alex@santafe.edu>

	* NEWS (Release Notes for 1.2): Removed features not going into
	the 1.2 release.

	* README: Changed the installation instructions to reference the
	new `configure' script, and point the user at the `INSTALL' file.
	Removed all description of `binary distributions' for this
	release, and removed obsolete `installation options' section.

	* INSTALL: Added Swarm-specific installation description, and a
	description for each group of options to `configure'.

1998-06-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* ltmain.sh, ltconfig, config.guess, config.sub, install-sh, missing,
	mkinstalldirs, INSTALL): New files.

	* configure.in: Add AM_PROG_LIBTOOL.  Remove AC_PROG_RANLIB.
	Substitute RPATH.

	* Makefile.appl.in (LINK): Use libtool for linking.

	* configure.in: Unconditionally run
	md_FIND_{TCL,TK}_{HEADERS,LIBRARIES}.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.conf, Makefile, Makefile.lib, Makefile.appl: Remove.

	* Makefile.appl.in, Makefile.lib.in: New files.

	* configure.in: Check for Makefile.appl.in instead of Makefile.rules.
	Test value of ac_R_space and ac_R_nospace to determine what to
	use for rpath option.  Add defaultdir, tclobjclibname, and bltlibname